--- a/ShippingProvider/appsettings.json
+++ b/ShippingProvider/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "KeyVault": "https://millekyhnet23.vault.azure.net/",
+  "PostNord": {
+    "BaseUrl": "https://atapi2.postnord.com/rest/businesslocation/v5/"
+  }
 }
