Updates appsettings.json with a more generic baseurl

--- a/ShippingProvider/appsettings.json
+++ b/ShippingProvider/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
   "KeyVault": "https://millekyhnet23.vault.azure.net/",
   "PostNord": {
-    "BaseUrl": "https://atapi2.postnord.com/rest/businesslocation/v5/"
+    "BaseUrl": "https://atapi2.postnord.com/rest/"
   }
 }
